Mudança de permissão de acesso e em crud de irregularidades

--- a/views/default/db_sigeo_manage.html
+++ b/views/default/db_sigeo_manage.html
@@ -1,3 +1,3 @@
 {{extend 'layout.html'}}
 
-<h2>Irregularidades já reportadas</h2><p>{{=form}}</p>
+<h2>Consultar ou Enviar Irregularidades</h2><p>{{=form}}</p>
