--- a/views/layout.html
+++ b/views/layout.html
@@ -137,8 +137,8 @@
                 {{block footer}} <!-- this is default footer -->
                 <div class="copyright pull-left">{{=T('Copyright')}} &#169; {{=request.now.year}}</div>
                 <div id="poweredBy" class="pull-right">
-                    {{=T('Powered by')}}
-                    <a href="http://www.web2py.com/">web2py</a>
+                    {{=T('Desenvolvido por CQN')}}
+                    
                 </div>
                 {{end}}
             </div>
